--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <img
               src="/image/online-courses.jpg"
               alt="Online Courses"
-              width="300px"
+              width="300"
               height="300"
             />
             <h3>Online Courses</h3>
