--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
   <body>
     <header class="">
       <nav class="body-medium">
-        <a class="logo" href="./index.html"><span>Web</span>Studio</a>
+        <a class="logo" href="./index.html">Web<span>Studio</span></a>
         <ul>
           <li>
-            <a href="Studio">Studio</a>
+            <a href="/index.html">Studio</a>
           </li>
           <li>
             <a href="Portfolio">Portfolio</a>
