--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
     />
   </head>
   <body>
-    <header class="">
-      <nav class="body-medium">
-        <a class="logo" href="./index.html">Web<span>Studio</span></a>
-        <ul>
+    <header>
+      <nav>
+        <a class="logo" href="/index.html">Web<span>Studio</span> </a>
+        <ul class="body-medium">
           <li>
             <a href="/index.html">Studio</a>
           </li>
           <li>
-            <a href="Portfolio">Portfolio</a>
+            <a href="">Portfolio</a>
           </li>
           <li>
-            <a href="Contacts">Contacts</a>
+            <a href="">Contacts</a>
           </li>
         </ul>
       </nav>
