first section fix 5.0

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="logo" href="/index.html">Web<span>Studio</span> </a>
         <ul class="body-medium">
           <li>
-            <a href="/index.html">Studio</a>
+            <a href="./index.html">Studio</a>
           </li>
           <li>
             <a href="">Portfolio</a>
