--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       </address>
     </header>
     <main>
-      <section class="Dark-bg">
+      <section class="dark-bg">
         <h1 class="header-1">Effective Solutions for Your Business</h1>
         <button class="button" type="button">
           <span class="button-text">Order Service</span>
