--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul class="contacts">
           <li>
             <a href="mailto:info@devstudio.com" target="_blank"
