--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <a class="logo" href="/index.html">Web<span>Studio</span> </a>
         <ul class="body-medium">
           <li>
-            <a href="./index.html">Studio</a>
+            <a class="body-medium" href="./index.html">Studio</a>
           </li>
           <li>
-            <a href="">Portfolio</a>
+            <a class="body-medium" href="">Portfolio</a>
           </li>
           <li>
-            <a href="">Contacts</a>
+            <a class="body-medium" href="">Contacts</a>
           </li>
         </ul>
       </nav>
