--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
     <header>
       <nav>
         <a class="logo" href="/index.html">Web<span>Studio</span> </a>
-        <ul class="body-medium">
+        <ul class="header-list">
           <li>
-            <a class="body-medium" href="./index.html">Studio</a>
+            <a class="header-list" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="body-medium" href="">Portfolio</a>
+            <a class="header-list" href="">Portfolio</a>
           </li>
           <li>
-            <a class="body-medium" href="">Contacts</a>
+            <a class="header-list" href="">Contacts</a>
           </li>
         </ul>
       </nav>
