--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <a class="logo" href="/index.html">Web<span>Studio</span> </a>
         <ul class="list">
           <li>
-            <a class="list" href="./index.html">Studio</a>
+            <a class="list-link" href="./index.html">Studio</a>
           </li>
           <li>
-            <a class="list" href="">Portfolio</a>
+            <a class="list-link" href="">Portfolio</a>
           </li>
           <li>
-            <a class="list" href="">Contacts</a>
+            <a class="list-link" href="">Contacts</a>
           </li>
         </ul>
       </nav>
