--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="logo" href="/index.html">Web<span>Studio</span> </a>
-        <ul class="list">
+        <ul class="list-link">
           <li>
             <a class="list-link" href="./index.html">Studio</a>
           </li>
