--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <a class="logo" href="/index.html">Web<span>Studio</span> </a>
-        <ul class="list">
+        <ul>
           <li>
             <a class="list-link" href="./index.html">Studio</a>
           </li>
@@ -28,10 +28,10 @@
           </li>
         </ul>
       </nav>
-      <address class="contacts">
-        <ul class="contacts">
+      <address>
+        <ul>
           <li>
-            <a href="mailto:info@devstudio.com" target="_blank"
+            <a class="c" href="mailto:info@devstudio.com" target="_blank"
               >info@devstudio.com</a
             >
           </li>
