--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <address>
         <ul>
           <li>
-            <a class="c" href="mailto:info@devstudio.com" target="_blank"
+            <a class="contacts-link" href="mailto:info@devstudio.com" target="_blank"
               >info@devstudio.com</a
             >
           </li>
