--- a/index.html
+++ b/index.html
@@ -28,15 +28,20 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="contacts">
         <ul>
           <li>
-            <a class="contacts-link" href="mailto:info@devstudio.com" target="_blank"
+            <a
+              class="contacts-link"
+              href="mailto:info@devstudio.com"
+              target="_blank"
               >info@devstudio.com</a
             >
           </li>
           <li>
-            <a class="contacts-link" href="tel:+110001111111">+11 (000) 111-11-11</a>
+            <a class="contacts-link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
           </li>
         </ul>
       </address>
