--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </header>
     <main>
       <section class="dark-bg">
-        <h1 class="header-1">Effective Solutions for Your Business</h1>
+        <h1 class="title-h1">Effective Solutions for Your Business</h1>
         <button class="button" type="button">
           <span class="button-text">Order Service</span>
         </button>
