--- a/index.html
+++ b/index.html
@@ -55,30 +55,30 @@
       </section>
       <section>
         <h2>Features</h2>
-        <ul class="Features-list">
+        <ul>
           <li>
-            <h3>Strategy</h3>
+            <h3 class="list-title">Strategy</h3>
             <p>
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
+            <h3 class="list-title">Punctuality</h3>
             <p>
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
+            <h3 class="list-title">Diligence</h3>
             <p>
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
+            <h3 class="list-title">Technologies</h3>
             <p>
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -86,10 +86,10 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2 class="header-2">Our Team</h2>
-        <ul class="our-team">
-          <li>
+      <section class="team-cont">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="team-list">
+          <li class="workers">
             <img
               src="/images/img-man-1.jpg"
               width="264"
@@ -99,7 +99,7 @@
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="workers">
             <img
               src="/images/img-man-2.jpg"
               width="264"
@@ -109,7 +109,7 @@
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="workers">
             <img
               src="/images/img-woman-1.jpg"
               width="264"
@@ -119,7 +119,7 @@
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="workers">
             <img
               src="/images/img-man-3.jpg"
               width="264"
