--- a/index.html
+++ b/index.html
@@ -48,38 +48,38 @@
     </header>
     <main>
       <section class="dark-bg">
-        <h1 class="title-h1">Effective Solutions for Your Business</h1>
+        <h1 class="sec-title-h1">Effective Solutions for Your Business</h1>
         <button class="button" type="button">
           <span class="button-text">Order Service</span>
         </button>
       </section>
       <section>
-        <h2>Features</h2>
+        <h2 class="sec-2-title">Features</h2>
         <ul>
           <li>
-            <h3 class="list-title">Strategy</h3>
-            <p>
+            <h3 class="sec-2-list-title">Strategy</h3>
+            <p class="sec-2-list-text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Punctuality</h3>
-            <p>
+            <h3 class="sec-2-list-title">Punctuality</h3>
+            <p class="sec-2-list-text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Diligence</h3>
-            <p>
+            <h3 class="sec-2-list-title">Diligence</h3>
+            <p class="sec-2-list-text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3 class="list-title">Technologies</h3>
-            <p>
+            <h3 class="sec-2-list-title">Technologies</h3>
+            <p class="sec-2-list-text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
