--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </button>
       </section>
       <section>
-        <h2 class="sec-2-title">Features</h2>
+        <h2 >Features</h2>
         <ul>
           <li>
             <h3 class="sec-2-list-title">Strategy</h3>
