--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
               height="200"
               alt="man-1"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title-names">Mark Guerrero</h3>
+            <p class="position">Product Designer</p>
           </li>
           <li class="workers">
             <img
