--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@
               height="200"
               alt="man-2"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title-names">Tom Ford</h3>
+            <p class="position">Frontend Developer</p>
           </li>
           <li class="workers">
             <img
@@ -116,8 +116,8 @@
               height="200"
               alt="woman-1"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title-names">Camila Garcia</h3>
+            <p class="position">Marketing</p>
           </li>
           <li class="workers">
             <img
@@ -126,8 +126,8 @@
               height="200"
               alt="man-3"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title-names">Daniel Wilson</h3>
+            <p class="position">UI Designer</p>
           </li>
         </ul>
       </section>
