--- a/index.html
+++ b/index.html
@@ -132,67 +132,67 @@
         </ul>
       </section>
       <section>
-        <h2 class="header-2">Our Portfolio</h2>
+        <h2 class="portfolio">Our Portfolio</h2>
         <ul class="list-portfolio">
           <li>
             <img
               src="/image/banking-app.jpg"
               alt="Banking App"
-              width="300"
+              width="360"
               height="300"
             />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <h3 class="title-names">Banking App</h3>
+            <p class="position">App</p>
           </li>
           <li>
             <img
               src="/image/cashless-payment.jpg"
               alt="Cashless Payment"
-              width="300"
+              width="360"
               height="300"
             />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <h3 class="title-names">Cashless Payment</h3>
+            <p class="position">Marketing</p>
           </li>
           <li>
             <img
               src="/image/meditaion-app.jpg"
               alt="Meditaion App"
-              width="300"
+              width="360"
               height="300"
             />
-            <h3>Meditaion App</h3>
-            <p>App</p>
+            <h3 class="title-names">Meditaion App</h3>
+            <p class="position">App</p>
           </li>
           <li>
             <img
               src="/image/taxi-service.jpg"
               alt="Taxi Service"
-              width="300"
+              width="360"
               height="300"
             />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <h3 class="title-names">Taxi Service</h3>
+            <p class="position">Marketing</p>
           </li>
           <li>
             <img
               src="/image/screen-illustrations.jpg"
               alt="Screen Illustrations"
-              width="300"
+              width="360"
               height="300"
             />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <h3 class="title-names">Screen Illustrations</h3>
+            <p class="position">Design</p>
           </li>
           <li>
             <img
               src="/image/online-courses.jpg"
               alt="Online Courses"
-              width="300"
+              width="360"
               height="300"
             />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <h3 class="title-names">Online Courses</h3>
+            <p class="position">Marketing</p>
           </li>
         </ul>
       </section>
