--- a/index.html
+++ b/index.html
@@ -136,27 +136,27 @@
         <ul class="list-portfolio">
           <li>
             <img
-              src="/image/banking-app.jpg"
+              src="/image/Banking App.jpg"
               alt="Banking App"
               width="360"
               height="300"
             />
             <h3 class="title-names">Banking App</h3>
-            <p class="position">App</p>
+            <p>App</p>
           </li>
           <li>
             <img
-              src="/image/cashless-payment.jpg"
+              src="/image/Cashless Payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
             />
             <h3 class="title-names">Cashless Payment</h3>
-            <p class="position">Marketing</p>
+            <p >Marketing</p>
           </li>
           <li>
             <img
-              src="/image/meditaion-app.jpg"
+              src="/image/Meditaion App.jpg"
               alt="Meditaion App"
               width="360"
               height="300"
@@ -166,7 +166,7 @@
           </li>
           <li>
             <img
-              src="/image/taxi-service.jpg"
+              src="/image/Taxi Service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -176,7 +176,7 @@
           </li>
           <li>
             <img
-              src="/image/screen-illustrations.jpg"
+              src="/image/Screen Illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -186,7 +186,7 @@
           </li>
           <li>
             <img
-              src="/image/online-courses.jpg"
+              src="/image/Online Courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
