--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <ul class="list-portfolio">
           <li>
             <img
-              src="/image/Banking-App.jpg"
+              src="/image/banking-app.jpg"
               alt="Banking App"
               width="360"
               height="300"
@@ -146,7 +146,7 @@
           </li>
           <li>
             <img
-              src="/image/Cashless-Payment.jpg"
+              src="/image/cashless-payment.jpg"
               alt="Cashless Payment"
               width="360"
               height="300"
@@ -156,7 +156,7 @@
           </li>
           <li>
             <img
-              src="/image/Meditaion-App.jpg"
+              src="/image/meditaion-app.jpg"
               alt="Meditaion App"
               width="360"
               height="300"
@@ -166,7 +166,7 @@
           </li>
           <li>
             <img
-              src="/image/Taxi-Service.jpg"
+              src="/image/taxi-service.jpg"
               alt="Taxi Service"
               width="360"
               height="300"
@@ -176,7 +176,7 @@
           </li>
           <li>
             <img
-              src="/image/Screen-Illustrations.jpg"
+              src="/image/screen-illustrations.jpg"
               alt="Screen Illustrations"
               width="360"
               height="300"
@@ -186,7 +186,7 @@
           </li>
           <li>
             <img
-              src="/image/Online-Courses.jpg"
+              src="/image/online-courses.jpg"
               alt="Online Courses"
               width="360"
               height="300"
