--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
               height="300"
             />
             <h3 class="title-names">Banking App</h3>
-            <p>App</p>
+            <p class="position">App</p>
           </li>
           <li>
             <img
@@ -152,7 +152,7 @@
               height="300"
             />
             <h3 class="title-names">Cashless Payment</h3>
-            <p >Marketing</p>
+            <p class="position">Marketing</p>
           </li>
           <li>
             <img
