--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
               width="360"
               height="300"
             />
-            <h3 class="title-names">Meditaion App</h3>
+            <h3 class="title-names">Meditation App</h3>
             <p class="position">App</p>
           </li>
           <li>
