--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </button>
       </section>
       <section>
-        <h2 >Features</h2>
+        <h2>Features</h2>
         <ul>
           <li>
             <h3 class="sec-two-list-title">Strategy</h3>
@@ -91,7 +91,7 @@
         <ul class="team-list">
           <li class="workers">
             <img
-              src="/images/img-man-1.jpg"
+              src="./images/img-man-1.jpg"
               width="264"
               height="200"
               alt="man-1"
@@ -101,7 +101,7 @@
           </li>
           <li class="workers">
             <img
-              src="/images/img-man-2.jpg"
+              src="./images/img-man-2.jpg"
               width="264"
               height="200"
               alt="man-2"
@@ -111,7 +111,7 @@
           </li>
           <li class="workers">
             <img
-              src="/images/img-woman-1.jpg"
+              src="./images/img-woman-1.jpg"
               width="264"
               height="200"
               alt="woman-1"
@@ -121,7 +121,7 @@
           </li>
           <li class="workers">
             <img
-              src="/images/img-man-3.jpg"
+              src="./images/img-man-3.jpg"
               width="264"
               height="200"
               alt="man-3"
@@ -198,7 +198,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html"><span>Web</span>Studio</a>
+      <a class="footer-logo" href="./index.html">Web<span class="l">Studio</span></a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
