--- a/index.html
+++ b/index.html
@@ -198,8 +198,8 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo" href="./index.html">Web<span class="l">Studio</span></a>
-      <p>
+      <a class="footer-logo-cont" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
