--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <ul class="team-list">
           <li class="workers">
             <img
-              src="./images/img-man-1.jpg"
+              src="./image/mark-guerrero.jpg"
               width="264"
               height="200"
               alt="man-1"
@@ -101,7 +101,7 @@
           </li>
           <li class="workers">
             <img
-              src="./images/img-man-2.jpg"
+              src="./image/tom-ford.jpg"
               width="264"
               height="200"
               alt="man-2"
@@ -111,7 +111,7 @@
           </li>
           <li class="workers">
             <img
-              src="./images/img-woman-1.jpg"
+              src="./image/camila-garcia.jpg"
               width="264"
               height="200"
               alt="woman-1"
@@ -121,7 +121,7 @@
           </li>
           <li class="workers">
             <img
-              src="./images/img-man-3.jpg"
+              src="./image/daniel-wilson.jpg"
               width="264"
               height="200"
               alt="man-3"
@@ -198,7 +198,9 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="footer-logo-cont" href="./index.html">Web<span class="footer-logo">Studio</span></a>
+      <a class="footer-logo-cont" href="./index.html"
+        >Web<span class="footer-logo">Studio</span></a
+      >
       <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
