--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
         <ul class="team-list">
           <li class="workers">
             <img
-              src="./image/mark-guerrero.jpg"
+              src="./images/mark-guerrero.jpg"
               width="264"
               height="200"
               alt="man-1"
@@ -101,7 +101,7 @@
           </li>
           <li class="workers">
             <img
-              src="./image/tom-ford.jpg"
+              src="./images/tom-ford.jpg"
               width="264"
               height="200"
               alt="man-2"
@@ -111,7 +111,7 @@
           </li>
           <li class="workers">
             <img
-              src="./image/camila-garcia.jpg"
+              src="./images/camila-garcia.jpg"
               width="264"
               height="200"
               alt="woman-1"
@@ -121,7 +121,7 @@
           </li>
           <li class="workers">
             <img
-              src="./image/daniel-wilson.jpg"
+              src="./images/daniel-wilson.jpg"
               width="264"
               height="200"
               alt="man-3"
